New API for payments history and messages
